--- a/rubinius-0.9.0/Rakefile
+++ b/rubinius-0.9.0/Rakefile
@@ -8,7 +8,9 @@ task :default => 'clean'
 desc "Cargo los datos de acuerdo al env"
 
 task :copy_libs do
-  puts 'holaaaaaaaaaa'
+  system "cp -r #{RBX_DIR}/lib #{INSTALL_DIR}/usr/lib"
+  system "cp -r #{RBX_DIR}/shotgun/dev-tramp  #{INSTALL_DIR}/usr/bin/rbx"
+  system "cp -r #{RBX_DIR}/shotgun/lib/librubinius-0.9.0.so #{INSTALL_DIR}/usr/lib/"
 end
 
 task :clean do
@@ -20,8 +22,6 @@ task :create_folders do
   folders.each{ |f| system "mkdir -p #{INSTALL_DIR}/#{f}" }
 end
 
-task :install => :create_folders do
-  system "cp -r #{RBX_DIR}/lib #{INSTALL_DIR}/usr/lib"
-  system "cp -r #{RBX_DIR}/shotgun/dev-tramp  #{INSTALL_DIR}/usr/bin/rbx"
-  system "cp -r #{RBX_DIR}/shotgun/lib/librubinius-0.9.0.so #{INSTALL_DIR}/usr/lib/"
+task :install => [:create_folders, :copy_libs] do
+
 end
