--- a/rubinius-0.9.0/debian/rules
+++ b/rubinius-0.9.0/debian/rules
@@ -38,7 +38,7 @@ clean:
 	rm -f build-stamp configure-stamp
 
 	# Add here commands to clean up after the build process.
-	$(MAKE) clean
+	rake clean
 
 	dh_clean 
 
@@ -49,7 +49,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/rubinius.
-	$(MAKE) DESTDIR=$(CURDIR)/debian/rubinius install
+	rake install 
 
 
 # Build architecture-independent files here.
