--- a/rubinius-0.9.0/Rakefile
+++ b/rubinius-0.9.0/Rakefile
@@ -2,13 +2,14 @@ require 'rake'
 
 INSTALL_DIR = 'debian/rubinius'
 RBX_DIR = '../rubinius'
+PACKAGE_VERSION = '0.9.0'
 
 task :default => 'clean'
 
 desc "Cargo los datos de acuerdo al env"
 
 task :copy_libs do
-  system "cp -r #{RBX_DIR}/lib #{INSTALL_DIR}/usr/lib"
+  system "cp -r #{RBX_DIR}/lib/* #{INSTALL_DIR}/usr/lib/rubinius/#{PACKAGE_VERSION}"
   system "cp -r #{RBX_DIR}/shotgun/dev-tramp  #{INSTALL_DIR}/usr/bin/rbx"
   system "cp -r #{RBX_DIR}/shotgun/lib/librubinius-0.9.0.so #{INSTALL_DIR}/usr/lib/"
 end
@@ -18,7 +19,7 @@ task :clean do
 end
 
 task :create_folders do
-  folders = %w(usr/lib usr/bin)
+  folders = %w(usr/lib usr/bin) + ["usr/lib/rubinius/#{PACKAGE_VERSION}"]
   folders.each{ |f| system "mkdir -p #{INSTALL_DIR}/#{f}" }
 end
 
