--- a/rubinius-0.9.0/debian/rules
+++ b/rubinius-0.9.0/debian/rules
@@ -27,7 +27,7 @@ build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	$(MAKE)
+	# $(MAKE)
 	#docbook-to-man debian/rubinius.sgml > rubinius.1
 
 	touch $@
@@ -42,12 +42,7 @@ clean:
 
 	dh_clean 
 
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
+install: 
 	# Add here commands to install the package into debian/rubinius.
 	rake install 
 
